--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "heosphoros",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://cherylqian.github.io/heosphoros/",
   "dependencies": {
     "add": "^2.0.6",
+    "gh-pages": "^1.1.0",
     "normalize.css": "^8.0.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
@@ -13,6 +15,8 @@
     "yarn": "^1.5.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
